--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,94 @@ body {
       width: 40%; }
       body .destination .destination-container .content p {
         font-size: 1.5rem; }
+  body .countries .count-container {
+    margin: 0 9rem;
+    height: 55rem;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 30% 30% 40%;
+        grid-template-columns: 30% 30% 40%;
+    grid-gap: 1rem; }
+    body .countries .count-container .count-1 {
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 2;
+      grid-row: 1/3; }
+      body .countries .count-container .count-1 .country-container {
+        background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.65)), color-stop(59%, rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0))), url("/images/hero3.jpg") no-repeat;
+        background: linear-gradient(to top, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 59%, rgba(0, 0, 0, 0) 100%), url("/images/hero3.jpg") no-repeat; }
+    body .countries .count-container .count-2 {
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 2;
+      grid-row: 1/3; }
+      body .countries .count-container .count-2 .country-container {
+        background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.65)), color-stop(59%, rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0))), url("/images/hero1.jpg") no-repeat;
+        background: linear-gradient(to top, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 59%, rgba(0, 0, 0, 0) 100%), url("/images/hero1.jpg") no-repeat; }
+    body .countries .count-container .count-3 .country-container {
+      background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.65)), color-stop(59%, rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0))), url("/images/hero.jpg") no-repeat;
+      background: linear-gradient(to top, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 59%, rgba(0, 0, 0, 0) 100%), url("/images/hero.jpg") no-repeat; }
+    body .countries .count-container .count-4 {
+      -ms-grid-column: 3;
+      -ms-grid-column-span: 1;
+      grid-column: 3/4; }
+      body .countries .count-container .count-4 .country-container {
+        background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.65)), color-stop(59%, rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0))), url("/images/hero3.jpg") no-repeat;
+        background: linear-gradient(to top, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 59%, rgba(0, 0, 0, 0) 100%), url("/images/hero3.jpg") no-repeat; }
+    body .countries .count-container .country {
+      width: 100%;
+      background-color: #fff;
+      -webkit-box-shadow: rgba(100, 100, 111, 0.2) 0 0.7rem 2.9rem 0;
+              box-shadow: rgba(100, 100, 111, 0.2) 0 0.7rem 2.9rem 0;
+      padding: 1rem; }
+      body .countries .count-container .country .country-container {
+        position: relative;
+        padding: 3rem 2rem;
+        width: 100%;
+        height: 100%;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat; }
+        body .countries .count-container .country .country-container .location a {
+          text-decoration: none;
+          color: #fff;
+          text-transform: uppercase;
+          font-size: 1.5rem;
+          padding: 1rem 2.4rem;
+          background-color: #2c75ba;
+          font-weight: 600;
+          -webkit-transition: all 0.2s linear;
+          transition: all 0.2s linear; }
+          body .countries .count-container .country .country-container .location a:hover {
+            background-color: #f56960; }
+        body .countries .count-container .country .country-container .down {
+          position: absolute;
+          bottom: 5%; }
+          body .countries .count-container .country .country-container .down a {
+            display: block;
+            color: #fff;
+            text-decoration: none;
+            font-size: 2.3rem;
+            -webkit-transition: all 0.2s linear;
+            transition: all 0.2s linear;
+            font-weight: 600; }
+            body .countries .count-container .country .country-container .down a:hover {
+              color: #f56960; }
+          body .countries .count-container .country .country-container .down span {
+            color: #fff; }
+  body .countries .more-destinations {
+    margin: 5rem 0;
+    text-align: center; }
+    body .countries .more-destinations a {
+      text-decoration: none;
+      color: #fff;
+      font-size: 1.5rem;
+      background-color: #f56960;
+      padding: 1rem 2.4rem;
+      text-transform: uppercase;
+      font-weight: 500;
+      -webkit-transition: all 0.2s linear;
+      transition: all 0.2s linear; }
+      body .countries .more-destinations a:hover {
+        background-color: #2c75ba; }
   body .button {
     padding: 1rem 3rem;
     text-transform: uppercase;
