--- a/scss/style.scss
+++ b/scss/style.scss
@@ -256,6 +256,150 @@ body {
     }
   }
 
+  .countries {
+    .count-container {
+      // width: 100%;
+      margin: 0 9rem;
+      height: 55rem;
+      display: grid;
+      grid-template-columns: 30% 30% 40%;
+      grid-gap: 1rem;
+
+      .count-1 {
+        // grid-column: 3/4;
+        grid-row: 1/3;
+
+        .country-container {
+          background: linear-gradient(
+              to top,
+              rgba(0, 0, 0, 0.65) 0%,
+              rgba(0, 0, 0, 0) 59%,
+              rgba(0, 0, 0, 0) 100%
+            ),
+            url('/images/hero3.jpg') no-repeat;
+        }
+      }
+      .count-2 {
+        // grid-column: 3/4;
+        grid-row: 1/3;
+        .country-container {
+          background: linear-gradient(
+              to top,
+              rgba(0, 0, 0, 0.65) 0%,
+              rgba(0, 0, 0, 0) 59%,
+              rgba(0, 0, 0, 0) 100%
+            ),
+            url('/images/hero1.jpg') no-repeat;
+        }
+      }
+
+      .count-3 {
+        .country-container {
+          background: linear-gradient(
+              to top,
+              rgba(0, 0, 0, 0.65) 0%,
+              rgba(0, 0, 0, 0) 59%,
+              rgba(0, 0, 0, 0) 100%
+            ),
+            url('/images/hero.jpg') no-repeat;
+        }
+      }
+
+      .count-4 {
+        grid-column: 3/4;
+        // grid-row: /;
+
+        .country-container {
+          background: linear-gradient(
+              to top,
+              rgba(0, 0, 0, 0.65) 0%,
+              rgba(0, 0, 0, 0) 59%,
+              rgba(0, 0, 0, 0) 100%
+            ),
+            url('/images/hero3.jpg') no-repeat;
+        }
+      }
+      .country {
+        // height: 25rem;
+        width: 100%;
+        background-color: $white-color;
+        box-shadow: rgba(100, 100, 111, 0.2) 0 0.7rem 2.9rem 0;
+        padding: 1rem;
+
+        .country-container {
+          position: relative;
+          padding: 3rem 2rem;
+          width: 100%;
+          height: 100%;
+
+          background-position: center;
+          background-size: cover;
+          background-repeat: no-repeat;
+
+          .location {
+            a {
+              text-decoration: none;
+              color: $white-color;
+              text-transform: uppercase;
+              font-size: 1.5rem;
+              padding: 1rem 2.4rem;
+              background-color: $secondary-color;
+
+              font-weight: 600;
+              transition: all 0.2s linear;
+
+              &:hover {
+                background-color: $primary-color;
+              }
+            }
+          }
+
+          .down {
+            position: absolute;
+            bottom: 5%;
+
+            a {
+              display: block;
+              color: $white-color;
+              text-decoration: none;
+              font-size: 2.3rem;
+              transition: all 0.2s linear;
+              font-weight: 600;
+
+              &:hover {
+                color: $primary-color;
+              }
+            }
+
+            span {
+              color: $white-color;
+            }
+          }
+        }
+      }
+    }
+
+    .more-destinations {
+      margin: 5rem 0;
+      text-align: center;
+
+      a {
+        text-decoration: none;
+        color: $white-color;
+        font-size: 1.5rem;
+        background-color: $primary-color;
+        padding: 1rem 2.4rem;
+        text-transform: uppercase;
+        font-weight: 500;
+        transition: all 0.2s linear;
+
+        &:hover {
+          background-color: $secondary-color;
+        }
+      }
+    }
+  }
+
   .button {
     padding: 1rem 3rem;
     text-transform: uppercase;
